removed space before star

--- a/diff2lip/index.html
+++ b/diff2lip/index.html
@@ -353,16 +353,7 @@ ol.horizontal li{
       <h2 class="subtitle has-text-centered">
         <span class="dnerf"><b>Diff2Lip</b>:</span> <b>arbitrary speech</b> + <b>face videos</b> → <b>high quality lip-sync</b>.<br>
             Applications: <b>movies</b>, <b>education</b>, <b>virtual avatars</b>, 
-            <b>(eventually) video conferencing
-              <div class="tooltip">
-                <sup>*</sup>
-                <div class="right">
-                  <div class="text-content">
-                    Diff2Lip is not real time yet but we are hopeful that future versions will be.
-                  </div>
-                  <i></i>
-                </div>
-              </div></b>.
+            <b>(eventually) video conferencing<div class="tooltip"><sup>*</sup><div class="right"><div class="text-content">Diff2Lip is not real time yet but we are hopeful that future versions will be.</div><i></i></div></div></b>.
       </h2>
       <video id="teaser" autoplay muted loop playsinline height="100%" controls>
         <source src=
