--- a/diff2lip/index.html
+++ b/diff2lip/index.html
@@ -286,6 +286,16 @@ ol.horizontal li{
                   <span>Code</span>
                   </a>
               </span>
+              <!-- Colab Link. -->
+              <span class="link-block">
+              <a href="https://colab.research.google.com/drive/1YXGFXWclLZnBLe16_Cp5q8O9vyp7utCn?usp=sharing"
+                  class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                    <img src="static/images/colab-logo.svg" alt="colab-logo">
+                </span>
+                <span>Colab</span>
+                </a>
+            </span>
 <!--              <!~~ Dataset Link. ~~>
               <span class="link-block">
                 <a href=""
